--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
+@font-face {
+  font-family: "Proxima Nova";
+  font-weight: 400;
+  src: local("Proxima Nova") url("./assets/Proxima\ Nova-Regular.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  font-weight: 600;
+  src: local("Proxima Nova") url("./assets/Proxima\ Nova-Semibold.otf") format("opentype");
+}
+
+.flex {
+  display: flex;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Proxima Nova', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  position: fixed;
+  font-size: 13px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+li {
+  list-style: none;
 }
